# zmp_simple

./: .dockerignore  .gitignore  CMakeLists.txt  README.md
docker/: Dockerfile.app_a  Dockerfile.app_b  Dockerfile.app_c  Dockerfile.base  docker-compose.yml  start.sh
examples/: CMakeLists.txt  inproc_example.cpp  ipc_publisher.cpp  ipc_subscriber.cpp  json_publisher.cpp  json_subscriber.cpp  test_multi_subscribe.cpp
include/: zmq_simple.hpp
python/: CMakeLists.txt  zmq_simple_py.cpp
python/examples/: json_app_c.py  json_publisher.py  json_subscriber.py
src/: zmq_simple.cpp
